# shosai

./: .gitignore  Cargo.toml  Makefile  flake.nix
.github/workflows/: ci.yml
crates/shosai-app/: Cargo.toml
crates/shosai-app/src/: app.rs  main.rs
crates/shosai-core/: Cargo.toml
crates/shosai-core/migrations/: 001_reading_state.sql  002_library.sql  003_preferences.sql  004_bookmarks.sql
crates/shosai-core/src/: bookmarks.rs  cbz.rs  document.rs  highlight.rs  lib.rs  library.rs  pdf.rs  reading_state.rs  search.rs
crates/shosai-core/src/epub/: mod.rs  parser.rs  render.rs  style.rs  types.rs
crates/shosai-core/tests/: bookmark_tests.rs  cbz_tests.rs  epub_tests.rs  library_tests.rs  pdf_tests.rs  reading_state_tests.rs
crates/shosai-core/tests/fixtures/: sample.cbz  sample.epub
docs/plans/: roadmap.org
scripts/: download-pdfium.sh
