[workspace]
members = ["crates/shosai-core", "crates/shosai-app"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/shosai"

[workspace.dependencies]
shosai-core = { path = "crates/shosai-core" }
anyhow = "1"
thiserror = "2"
bytes = "1"
