[package]
name = "shosai-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shosai-core.workspace = true
anyhow.workspace = true
bytes.workspace = true
iced = { version = "0.14", features = ["image", "tokio"] }
rfd = "0.15"
tokio = { version = "1", features = ["fs"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif"] }
