[package]
name = "shosai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
pdfium-render = { version = "0.8", features = ["thread_safe", "sync", "image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
serial_test = "3.4.0"
