[package]
name = "shosai-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
pdfium-render = { version = "0.8", features = ["thread_safe", "sync", "image"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt"] }
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
roxmltree = "0.21.1"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt", "macros"] }
